Implement Phase 1 Steps 1-2: core types and secure cache
Step 1 - Core Types:
- types.rs: CacheType enum, PromptConfig, PromptResponse
- protocol.rs: Request/Response enums, ErrorCode, JSON serialization
- traits.rs: PasswordPrompt, SocketProvider, EventMonitor traits

Step 2 - Secure Cache:
- cache.rs: CachedCredential with TTL, CredentialCache with mlock
- Memory locking via memsec for swap protection
- TTL-based automatic expiry
- Per-type cache clearing (SSH, Git, Sudo)

39 tests passing covering serde round-trips, cache operations,
TTL expiry, and security (credential redaction in Debug output).

--- a/crates/secure-askpass-core/Cargo.toml
+++ b/crates/secure-askpass-core/Cargo.toml
@@ -9,4 +9,12 @@ repository.workspace = true
 [dependencies]
 secrecy = { workspace = true }
 zeroize = { workspace = true }
+memsec = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tracing = { workspace = true }
+
+[dev-dependencies]
+proptest = "1"
