Complete Phase 1: Steps 3-7 implementation
Step 3 - Cache ID Auto-Detection:
- cache_id.rs: Detect SSH FIDO2, Git, sudo prompts
- Proptest fuzzing for parser robustness
- 67 tests in core crate

Step 4 - Socket Provider:
- SystemdSocketProvider with socket activation
- ManualSocketProvider for development/testing
- Proper socket permissions (0600)

Step 5 - GTK4 Password Prompt:
- Gtk4PasswordPrompt with password entry dialog
- MockPasswordPrompt for testing
- Timeout handling and cancel support

Step 6 - Daemon Orchestration:
- Daemon struct coordinating all components
- Request handling for GetCredential, ClearCache, Ping
- Cache integration with TTL-based expiry

Step 7 - Client Binary:
- askpass-client for SSH_ASKPASS/GIT_ASKPASS/SUDO_ASKPASS
- Socket communication with daemon
- Proper credential output to stdout

Total: 103 tests passing (4 ignored for display server requirement)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ dirs = "6"
 # Platform integration
 zbus = "5"
 sd-notify = "0.4"
+libc = "0.2"
 
 # Crypto (optional, for encrypted cache)
 aes-gcm = "0.10"
