--- a/crates/secure-askpass-daemon/Cargo.toml
+++ b/crates/secure-askpass-daemon/Cargo.toml
@@ -11,6 +11,19 @@ secure-askpass-core = { path = "../secure-askpass-core" }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+anyhow = { workspace = true }
+thiserror = { workspace = true }
+dirs = { workspace = true }
+libc = { workspace = true }
+gtk4 = { workspace = true }
+secrecy = { workspace = true }
+
+[dev-dependencies]
+tempfile = "3"
+
+[lib]
+name = "secure_askpass_daemon"
+path = "src/lib.rs"
 
 [[bin]]
 name = "secure-askpass-daemon"
