--- a/crates/askpass-client/Cargo.toml
+++ b/crates/askpass-client/Cargo.toml
@@ -10,6 +10,10 @@ repository.workspace = true
 secure-askpass-core = { path = "../secure-askpass-core" }
 serde_json = { workspace = true }
 zeroize = { workspace = true }
+secrecy = { workspace = true }
+dirs = { workspace = true }
+anyhow = { workspace = true }
+libc = { workspace = true }
 
 [[bin]]
 name = "askpass-client"
