Add CLI prompt mode and fix systemd service type
- Add CliPasswordPrompt for terminal-based password entry (headless/testing)
- Support SECURE_ASKPASS_CLI=1 env var to switch to CLI mode
- Add rpassword dependency for secure terminal input
- Fix home-manager module: Type=notify -> Type=simple (no sd_notify yet)
- Export CliPasswordPrompt from daemon lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ rand = "0.9"
 
 # Logging
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Error handling
 anyhow = "1"
