--- a/crates/secure-askpass-daemon/Cargo.toml
+++ b/crates/secure-askpass-daemon/Cargo.toml
@@ -17,6 +17,7 @@ dirs = { workspace = true }
 libc = { workspace = true }
 gtk4 = { workspace = true }
 secrecy = { workspace = true }
+rpassword = "7"
 
 [dev-dependencies]
 tempfile = "3"
