--- a/crates/askpass-client/Cargo.toml
+++ b/crates/askpass-client/Cargo.toml
@@ -14,6 +14,7 @@ secrecy = { workspace = true }
 dirs = { workspace = true }
 anyhow = { workspace = true }
 libc = { workspace = true }
+gtk4 = { workspace = true }
 
 [[bin]]
 name = "askpass-client"
