--- a/crates/secure-askpass-daemon/Cargo.toml
+++ b/crates/secure-askpass-daemon/Cargo.toml
@@ -11,6 +11,7 @@ secure-askpass-core = { path = "../secure-askpass-core" }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tracing-journald = "0.3"
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 dirs = { workspace = true }
