--- a/crates/askpass-cache-ctl/Cargo.toml
+++ b/crates/askpass-cache-ctl/Cargo.toml
@@ -5,10 +5,10 @@ authors.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
-description = "Control utility for the secure-askpass credential cache"
+description = "Control utility for the askpass-cache credential cache"
 
 [dependencies]
-secure-askpass-core = { path = "../secure-askpass-core" }
+askpass-cache-core = { path = "../askpass-cache-core" }
 clap = { version = "4", features = ["derive"] }
 anyhow = { workspace = true }
 dirs = { workspace = true }
