--- a/crates/askpass-cache-core/Cargo.toml
+++ b/crates/askpass-cache-core/Cargo.toml
@@ -15,6 +15,9 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+toml = { workspace = true }
+dirs = { workspace = true }
 
 [dev-dependencies]
 proptest = "1"
+tempfile = "3"
