--- a/crates/askpass-client/Cargo.toml
+++ b/crates/askpass-client/Cargo.toml
@@ -15,6 +15,7 @@ dirs = { workspace = true }
 anyhow = { workspace = true }
 libc = { workspace = true }
 gtk4 = { workspace = true }
+toml = { workspace = true }
 
 [[bin]]
 name = "askpass-client"
