--- a/crates/askpass-cached/Cargo.toml
+++ b/crates/askpass-cached/Cargo.toml
@@ -17,6 +17,7 @@ thiserror = { workspace = true }
 dirs = { workspace = true }
 libc = { workspace = true }
 secrecy = { workspace = true }
+clap = { version = "4", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3"
