--- a/crates/askpass-cache-core/Cargo.toml
+++ b/crates/askpass-cache-core/Cargo.toml
@@ -7,9 +7,11 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+aes-gcm = { workspace = true }
 secrecy = { workspace = true }
 zeroize = { workspace = true }
 memsec = { workspace = true }
+rand = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
